[package]
name = "counter"
version = "0.1.0"
authors = ["expertdicer@gmail.com"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use imported feature to disable all instantiate/execute/query exports
imported = []

[dependencies]
cosmwasm-schema =  "1.1.2"
cosmwasm-std =  {version = "1.2", features = ["stargate"]}
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
cosmwasm-storage = "1.1.2"
cw-storage-plus = "1.0.1"